[gd_scene load_steps=19 format=3 uid="uid://37251en6xow0"]

[ext_resource type="Script" path="res://Sunburst/Scenes/Shop/item_showcase.gd" id="1_v824x"]
[ext_resource type="LabelSettings" uid="uid://cl7h1irkfpuni" path="res://Sunburst/Styles/ItemText.tres" id="2_hchrh"]
[ext_resource type="Texture2D" uid="uid://bbqto6yu28qv3" path="res://Sunburst/Assets/Items/dia_sword.png" id="3_kykxu"]
[ext_resource type="Texture2D" uid="uid://babyasn4h0f17" path="res://Sunburst/Assets/left.png" id="4_jkog7"]
[ext_resource type="StyleBox" uid="uid://bk2vn5bpugsjh" path="res://Sunburst/Styles/NEwBackgroundStyle.tres" id="5_y71ki"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pl3yi"]
bg_color = Color(0.235294, 0.235294, 0.235294, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.592157, 0.592157, 0.592157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t14rp"]
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8

[sub_resource type="LabelSettings" id="LabelSettings_2sm8m"]
font_size = 68
font_color = Color(0.831373, 0.686275, 0.215686, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_amgdt"]
font_size = 60
font_color = Color(0.0862745, 0.627451, 0.521569, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_di6d6"]

[sub_resource type="LabelSettings" id="LabelSettings_lqtcy"]
font_size = 60
font_color = Color(0.772549, 0, 0.105882, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wwi4s"]
font_size = 36
font_color = Color(0.0862745, 0.627451, 0.521569, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4derp"]
font_size = 36
font_color = Color(0.772549, 0, 0.105882, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oyuiv"]

[sub_resource type="LabelSettings" id="LabelSettings_gomho"]
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xbshm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ywru"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cccds"]

[node name="ItemShowcase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v824x")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(800, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pl3yi")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ItemName" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_t14rp")
text = "ITEM NAME"
label_settings = ExtResource("2_hchrh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemImage" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(240, 240)
layout_mode = 2
texture = ExtResource("3_kykxu")
expand_mode = 1
stretch_mode = 5

[node name="ItemCost" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Gold: 1000"
label_settings = SubResource("LabelSettings_2sm8m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemBulwark" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bulwark: X"
label_settings = SubResource("LabelSettings_amgdt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_di6d6")

[node name="ItemStrength" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Strength: X"
label_settings = SubResource("LabelSettings_lqtcy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemPVPatt" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "PVP Def: X"
label_settings = SubResource("LabelSettings_wwi4s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_di6d6")

[node name="ItemPVPatt2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "PVP Attack: X"
label_settings = SubResource("LabelSettings_4derp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_oyuiv")

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemBossDamage" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Boss DMG: X"
label_settings = SubResource("LabelSettings_gomho")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_xbshm")

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Close" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
icon = ExtResource("4_jkog7")
flat = true
expand_icon = true

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_0ywru")

[node name="Buy" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 53
theme_override_styles/normal = ExtResource("5_y71ki")
theme_override_styles/hover = SubResource("StyleBoxFlat_cccds")
theme_override_styles/pressed = ExtResource("5_y71ki")
text = "BUY"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer5/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer5/Buy" to="." method="_on_buy_pressed"]
